--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+__pycache__/*
 *.py[cod]
 
 # C extensions
@@ -77,6 +77,7 @@ target/
 
 # exclude data from source control by default
 /data/
+/models/
 
 # Mac OS-specific storage files
 .DS_Store
